sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:13: error: unclosed character literal
		} else { return 'return'
                                       ^AlgBubbleSort3:2: error: Missing closing brace `}' assumed here
def bubbleSort3() {
^